@@ -190,12 +190,12 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
             tempFileLocation = File.createTempFile("check", "tmp", baseDir);
             if (!tempFileLocation.delete()) {
                 setEnabled(false);
-                final String msg = String.format("Unable to delete temporary file '%s'.", tempFileLocation.getAbsolutePath());
+                final String msg = "Unable to delete temporary file '%s'.".formatted(tempFileLocation.getAbsolutePath());
                 throw new InitializationException(msg);
             }
             if (!tempFileLocation.mkdirs()) {
                 setEnabled(false);
-                final String msg = String.format("Unable to create directory '%s'.", tempFileLocation.getAbsolutePath());
+                final String msg = "Unable to create directory '%s'.".formatted(tempFileLocation.getAbsolutePath());
                 throw new InitializationException(msg);
             }
         } catch (IOException ex) {
@@ -219,8 +219,10 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
             if (!success && tempFileLocation.exists()) {
                 final String[] l = tempFileLocation.list();
                 if (l != null && l.length > 0) {
-                    LOGGER.warn("Failed to delete the Archive Analyzer's temporary files from `{}`, "
-                                + "see the log for more details", tempFileLocation.toString());
+                    LOGGER.warn("""
+                                Failed to delete the Archive Analyzer's temporary files from `{}`, \
+                                see the log for more details\
+                                """, tempFileLocation.toString());
                 }
             }
         }
@@ -398,7 +400,7 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
             return getNextTempDirectory();
         }
         if (!directory.mkdirs()) {
-            final String msg = String.format("Unable to create temp directory '%s'.", directory.getAbsolutePath());
+            final String msg = "Unable to create temp directory '%s'.".formatted(directory.getAbsolutePath());
             throw new AnalysisException(msg);
         }
         return directory;
@@ -424,7 +426,7 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
             try {
                 fis = new FileInputStream(archive);
             } catch (FileNotFoundException ex) {
-                final String msg = String.format("Error extracting file `%s`: %s", archive.getAbsolutePath(), ex.getMessage());
+                final String msg = "Error extracting file `%s`: %s".formatted(archive.getAbsolutePath(), ex.getMessage());
                 LOGGER.debug(msg, ex);
                 throw new AnalysisException(msg);
             }
@@ -451,8 +453,8 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
                     if (engine.accept(f)) {
                         final String destPath = destination.getCanonicalPath();
                         if (!f.getCanonicalPath().startsWith(destPath)) {
-                            final String msg = String.format(
-                                    "Archive (%s) contains a file that would be written outside of the destination directory",
+                            final String msg = 
+                                    "Archive (%s) contains a file that would be written outside of the destination directory".formatted(
                                     archive.getPath());
                             throw new AnalysisException(msg);
                         }
@@ -466,8 +468,8 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
                     if (engine.accept(f)) {
                         final String destPath = destination.getCanonicalPath();
                         if (!f.getCanonicalPath().startsWith(destPath)) {
-                            final String msg = String.format(
-                                    "Archive (%s) contains a file that would be written outside of the destination directory",
+                            final String msg = 
+                                    "Archive (%s) contains a file that would be written outside of the destination directory".formatted(
                                     archive.getPath());
                             throw new AnalysisException(msg);
                         }
@@ -577,15 +579,15 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
                 final Path f = d.resolve(entry.getName()).normalize();
                 if (!f.startsWith(d)) {
                     LOGGER.debug("ZipSlip detected\n-Destination: " + d + "\n-Path: " + f);
-                    final String msg = String.format(
-                            "Archive contains a file (%s) that would be extracted outside of the target directory.",
+                    final String msg = 
+                            "Archive contains a file (%s) that would be extracted outside of the target directory.".formatted(
                             entry.getName());
                     throw new ArchiveExtractionException(msg);
                 }
                 final File file = f.toFile();
                 if (entry.isDirectory()) {
                     if (!file.exists() && !file.mkdirs()) {
-                        final String msg = String.format("Unable to create directory '%s'.", file.getAbsolutePath());
+                        final String msg = "Unable to create directory '%s'.".formatted(file.getAbsolutePath());
                         throw new AnalysisException(msg);
                     }
                 } else if (engine.accept(file)) {
@@ -610,18 +612,18 @@ public class ArchiveAnalyzer extends AbstractFileTypeAnalyzer {
         LOGGER.debug("Extracting '{}'", file.getPath());
         final File parent = file.getParentFile();
         if (!parent.isDirectory() && !parent.mkdirs()) {
-            final String msg = String.format("Unable to build directory '%s'.", parent.getAbsolutePath());
+            final String msg = "Unable to build directory '%s'.".formatted(parent.getAbsolutePath());
             throw new AnalysisException(msg);
         }
         try (FileOutputStream fos = new FileOutputStream(file)) {
             IOUtils.copy(input, fos);
         } catch (FileNotFoundException ex) {
             LOGGER.debug("", ex);
-            final String msg = String.format("Unable to find file '%s'.", file.getName());
+            final String msg = "Unable to find file '%s'.".formatted(file.getName());
             throw new AnalysisException(msg, ex);
         } catch (IOException ex) {
             LOGGER.debug("", ex);
-            final String msg = String.format("IO Exception while parsing file '%s'.", file.getName());
+            final String msg = "IO Exception while parsing file '%s'.".formatted(file.getName());
             throw new AnalysisException(msg, ex);
         }
     }
